--- a/_talks/2021-05-10-CHI.md
+++ b/_talks/2021-05-10-CHI.md
@@ -8,9 +8,7 @@ date: 2021-05-10
 location: "Yokohama, Japan (Virtual)"
 ---
 
-I presented my paper [The Challenges in Modeling Human Performance in 3D Space with Fitts' Law](https://dl.acm.org/doi/10.1145/3411763.3443442) at the leading Human-Computer Interaction conference ACM Conference on Human Factors in Computing Systems (CHI). My presentation was recorded and can be accessed on [YouTube](https://www.youtube.com/watch?v=n96uDv84AbM). 
-
-The conference program can be found [here](https://programs.sigchi.org/chi/2021/program/content/56833).
+I presented my paper [The Challenges in Modeling Human Performance in 3D Space with Fitts' Law](https://dl.acm.org/doi/10.1145/3411763.3443442) at the leading Human-Computer Interaction conference ACM Conference on Human Factors in Computing Systems (CHI). My presentation was recorded and can be accessed on [YouTube](https://www.youtube.com/watch?v=n96uDv84AbM). The conference program can be found [here](https://programs.sigchi.org/chi/2021/program/content/56833).
 
 <b> Paper Abstract </b>
 
