Updates on Conferences and Journals

--- a/_talks/2023-09-28-IGE-LLMs.md
+++ b/_talks/2023-09-28-IGE-LLMs.md
@@ -1,12 +1,14 @@
 ---
-title: "Early Access - arXiv Pre-Print"
+title: "Early Access - arXiv Pre-Print (Accepted at ICRA 2024)"
 collection: talks
 type: "Talk"
 permalink: /talks/2023-09-28-IGE-LLMs
-venue: "arXiv Pre-Print (2023)"
+venue: "IEEE International Conference on Robotics and Automation (ICRA) 2024 - Available as arXiv Pre-Print"
 date: 2023-09-28
 location: "N/A"
 ---
+
+<img src="/images/icra_cover.png" alt="Description of image" width="300"/>
 
 Our paper Intrinsic Language-Guided Exploration for Complex Long-Horizon Robotic Manipulation Tasks can be accessed as an early access pre-print on [arXiv](https://www.nature.com/articles/s42256-023-00709-2), with a video presentation of the work also available on [YouTube](https://www.youtube.com/watch?v=Z0NHHs2IfPw).
 
